@@ -37,6 +37,7 @@ Version 2.5.0-Beta 1
 
 
   BUGFIXES:
+    * Fixed several potential AmarokUrl related crashes.
     * Rework iPod identification so that it is more reliable (BR 263288)
     * iPhone 3G (and perhaps later models) should be correctly recognized by
       Amarok now. (BR 281738)
